[gd_scene load_steps=29 format=2]

[ext_resource path="res://Scripts/Jogador.gd" type="Script" id=1]
[ext_resource path="res://Artes/testeSliced2.0/teste2.0/4.png" type="Texture" id=2]
[ext_resource path="res://Cenas/VidaDoJogador.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sons/tiro.wav" type="AudioStream" id=4]
[ext_resource path="res://Sons/jump.wav" type="AudioStream" id=5]
[ext_resource path="res://Sons/sons cells journey novos/som_alex_toma_dano.wav" type="AudioStream" id=6]
[ext_resource path="res://Artes/testeSliced2.0/teste2.0/5.png" type="Texture" id=7]
[ext_resource path="res://Artes/testeSliced2.0/teste2.0/0.png" type="Texture" id=8]
[ext_resource path="res://Artes/testeSliced2.0/teste2.0/6.png" type="Texture" id=9]
[ext_resource path="res://Artes/testeSliced2.0/teste2.0/7.png" type="Texture" id=10]
[ext_resource path="res://Artes/testeSliced2.0/teste2.0/8.png" type="Texture" id=11]
[ext_resource path="res://Artes/testeSliced2.0/teste2.0/1.png" type="Texture" id=12]
[ext_resource path="res://Artes/testeSliced2.0/teste2.0/3.png" type="Texture" id=13]
[ext_resource path="res://Artes/testeSliced2.0/teste2.0/2.png" type="Texture" id=14]
[ext_resource path="res://Artes/testeSliced2.0/teste2.0/13.png" type="Texture" id=15]
[ext_resource path="res://Artes/testeSliced2.0/teste2.0/15.png" type="Texture" id=16]
[ext_resource path="res://Artes/testeSliced2.0/teste2.0/11.png" type="Texture" id=17]
[ext_resource path="res://Artes/testeSliced2.0/teste2.0/12.png" type="Texture" id=18]
[ext_resource path="res://Artes/testeSliced2.0/teste2.0/10.png" type="Texture" id=19]
[ext_resource path="res://Artes/testeSliced2.0/teste2.0/16.png" type="Texture" id=20]
[ext_resource path="res://Artes/testeSliced2.0/teste2.0/19.png" type="Texture" id=21]
[ext_resource path="res://Artes/testeSliced2.0/teste2.0/9.png" type="Texture" id=22]
[ext_resource path="res://Artes/testeSliced2.0/teste2.0/18.png" type="Texture" id=23]
[ext_resource path="res://Artes/testeSliced2.0/teste2.0/14.png" type="Texture" id=24]
[ext_resource path="res://Artes/testeSliced2.0/teste2.0/17.png" type="Texture" id=25]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "Pulando",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 14 ), ExtResource( 2 ) ],
"loop": true,
"name": "Correndo",
"speed": 6.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 25 ), ExtResource( 21 ) ],
"loop": true,
"name": "CorrendoAtirandoTenis",
"speed": 6.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "Parado",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "ParadoAtirando",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 18 ), ExtResource( 24 ) ],
"loop": true,
"name": "CorrendoTenis",
"speed": 6.0
}, {
"frames": [ ExtResource( 19 ) ],
"loop": true,
"name": "PulandoTenis",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ) ],
"loop": true,
"name": "PulandoAtirandoTenis",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "ParadoTenis",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ) ],
"loop": true,
"name": "ParadoAtirandoTenis",
"speed": 1.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 10 ), ExtResource( 22 ) ],
"loop": true,
"name": "CorrendoAtirando",
"speed": 6.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "PulandoAtirando",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 19.5, 30.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 20, 30.25 )

[node name="Jogador" type="KinematicBody2D"]
position = Vector2( 742, 633 )
scale = Vector2( 2, 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="ImagemJogador" type="AnimatedSprite" parent="."]
position = Vector2( -30, 6.00006 )
scale = Vector2( 0.346154, 0.346154 )
frames = SubResource( 6 )
animation = "CorrendoAtirandoTenis"
playing = true

[node name="ColisorJogador" type="CollisionShape2D" parent="."]
position = Vector2( -28.5, 6 )
shape = SubResource( 1 )

[node name="CameraDoJogador" type="Camera2D" parent="."]
position = Vector2( 0.9375, -39.3125 )
current = true
zoom = Vector2( 1.6, 1.6 )
limit_left = 0
drag_margin_h_enabled = true
drag_margin_v_enabled = true
drag_margin_left = 0.83
drag_margin_top = 0.76
drag_margin_right = 0.5

[node name="BarraDeVidaDoJogador" parent="." instance=ExtResource( 3 )]

[node name="SomPulo" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="SomTiro" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="SomDano" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="AreaJogador" type="Area2D" parent="."]

[node name="ColisorAreaJogador" type="CollisionShape2D" parent="AreaJogador"]
position = Vector2( -28.5, 5.75 )
shape = SubResource( 5 )

[connection signal="body_entered" from="AreaJogador" to="." method="_on_AreaJogador_body_entered"]
